# cpp-httpserver

./: CMakeLists.txt  main.cpp  readme.md  testing.cpp
FileServer/: MyRestHandler.h
FileServer/FileHelper/: FileHelper.cpp  FileHelper.h
HttpServer/: HttpHandler.h  HttpRestHandler.h  HttpServer.cpp  HttpServer.h  RestServer.cpp  RestServer.h
HttpServer/Handlers/: HttpHandler.h  RestHandler.h
